troubleshooting migration bug

--- a/backend-fit-tracker/package.json
+++ b/backend-fit-tracker/package.json
@@ -21,7 +21,8 @@
     "typeorm": "npm run build && npx typeorm -d dist/db/data-source.js",
     "migration:generate": "npm run typeorm -- migration:generate",
     "migration:run": "npm run typeorm -- migration:run",
-    "migration:revert": "npm run typeorm -- migration:revert"
+    "migration:revert": "npm run typeorm -- migration:revert",
+    "seed": "npx ts-node src/db/seeds/seed.ts"
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
