--- a/backend-fit-tracker/ormconfig.json
+++ b/backend-fit-tracker/ormconfig.json
@@ -6,6 +6,6 @@
   "password": "",
   "database": "fit_tracker",
   "entities": ["dist/src/entities/*.js"],
-  "migrations": ["dist/migrations/*.js"],
+  "migrations": ["dist/db/migrations/*.js"],
   "synchronize": false
 }
