--- a/backend-fit-tracker/ormconfig.json
+++ b/backend-fit-tracker/ormconfig.json
@@ -5,7 +5,7 @@
   "username": "postgres",
   "password": "",
   "database": "fit_tracker",
-  "entities": ["dist/src/entities/*.js"],
+  "entities": ["dist/entities/*.js"],
   "migrations": ["dist/db/migrations/*.js"],
   "synchronize": false
 }
