--- a/backend-goal-tracker/package.json
+++ b/backend-goal-tracker/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "backend-fit-tracker",
+  "name": "backend-goal-tracker",
   "version": "0.0.1",
   "description": "",
   "author": "",
